- inverse ids in 3 player mode (1,2,3->1,3,5) - chaos mode movement limiter for inner base - classic mode movement limiter for adjacent base - gamevariant creation with listings - turn skip button - improved auditlog
